--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
 
-    <title>Document</title>
+    <title>yahya hoummani</title>
 </head>
 <body>
     <!-- navigation bar -->
