Update and rename portfolio.html to index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <img src="/portfolio-pics/html-logo.svg" alt="">
             </div>
             <div class="logo1">
-                <img src="/portfolio-pics/js-logo.svg" alt="">
+                <img src="js-logo.svg" alt="">
             </div>
             <div class="logo1">
                 <img src="/portfolio-pics/css-logo.svg" alt="">
