--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
-
     <title>yahya hoummani</title>
 </head>
 <body>
@@ -134,6 +133,6 @@
             </div>
         </div>
     </div>
-
+<script src="scripts/script.js"></script>
 </body>
 </html>
