--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
    <nav class="mobile-nav">
         <ul>
             <img class="menu-x" src="https://img.icons8.com/forma-regular-filled-sharp/24/x.png">
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#about-me">About me</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">projects</a></li>
+            <li><a class="menu-element" href="#Home">Home</a></li>
+            <li><a class="menu-element" href="#about-me">About me</a></li>
+            <li><a class="menu-element" href="#skills">Skills</a></li>
+            <li><a class="menu-element" href="#projects">projects</a></li>
         </ul>
     </nav>
    <!-- header -->
