--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="pro">
                 <h3>Project 1</h3>
                 <p>desctiption of the first project in this paragraph</p>
-                <a href="#">code</a>
+                <a href="https://john1yahya.github.io/login-page/">code</a>
             </div>
             <div class="pro">
                 <h3>Project 2</h3>
